<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.bellman.inecparrot.home.HomeActivity"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
                <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->

                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
                <!--android:id="@+id/main.title"-->
                <!--android:text="Sunday School Lessons"-->
                <!--android:textColor="@color/white"-->
                <!--android:textStyle="bold"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:gravity="center"-->
                <!--android:autoLink="web" />-->
                <!--</RelativeLayout>-->
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/content_home"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/nav_bg"
        app:headerLayout="@layout/drawer_header"
        app:itemIconTint="@color/Wheat"
        app:itemTextAppearance="?android:attr/textAppearanceMedium"
        app:itemTextColor="@color/AntiqueWhite"
        app:menu="@menu/nav_menu" />
</android.support.v4.widget.DrawerLayout>